--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "sequelize": "^3.5.1",
-    "pg": "^4.5.5"
+    "pg": "^4.5.5",
+    "underscore": "^1.8.3"
   }
 }
